<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Abhiyaaan</string>
    <string name="display_textview1">Hello world!</string>
    <string name="display_textview2">Hello world!</string>
    <string name="display_textview3">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button1">ClickME</string>
    <string name="title_activity_salman_act">MainActivity</string>
    <string name="text1">Location </string>
    <string name="text2">Dirt type </string>
    <string name="text3">Rating </string>
    <string name="textview2">DIRT TYPE</string>
    <string name="textview1">LOCATION</string>
    <string name="textview3">RATING</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="desc">Image View</string>
    <string name="LoadPicture">Load Picture</string>
    <string name="title_activity_get_result">GetResult</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_get_data">GetData</string>
    <string name="title_activity_send_query">SendQuery</string>
    <string name="title_activity_gfg_main">GfgMainActivity</string>

</resources>